--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "r.k-water-website",
+  "name": "r.k-water",
   "version": "1.0.0",
-  "description": "",
+  "description": "A website for R.K. Water providing information about water purification solutions and services.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-     "dev": "tailwindcss -i ./src/input.css -o ./public/output.css --watch"
+    "start": "tailwindcss -o ./public/output.css --watch"
   },
-  "author": "",
+  "author": "Akash Bambhaniya | akash.dev.personal@gmail.com | https://akashb.vercel.app/",
   "license": "ISC",
+  "private": true,
+  "dependencies": {},
   "devDependencies": {
     "tailwindcss": "^3.4.4"
   },
-  "dependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38"
-  }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Akashnb/Rk-Waters"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "homepage": "https://rkwater.vercel.app/"
 }
